--- a/Login/sign_upstyle.css
+++ b/Login/sign_upstyle.css
@@ -1,28 +1,42 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Inter', sans-serif;
-  background-color: #fff;
-}
-
 .registration-container {
   display: flex;
   min-height: 100vh;
   background-color: #fff;
 }
 
-.registration-wrapper {
+.hero-image {
+  width: 50%;
+  height: 707px;
+  object-fit: cover;
+}
+
+@media (max-width: 991px) {
+  .hero-image {
+    display: none;
+  }
+}
+
+.registration-content {
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 14px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 14px 40px 0;
+}
+
+@media (max-width: 991px) {
+  .registration-content {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 640px) {
+  .registration-content {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 
 .registration-header {
@@ -32,15 +46,28 @@ body {
   margin-bottom: 30px;
 }
 
-.registration-logo {
+.logo {
   width: 45px;
   height: 45px;
 }
 
-.registration-title {
+.title {
   color: #1a8754;
+  font-family: Inter, sans-serif;
   font-size: 48px;
   font-weight: 700;
+}
+
+@media (max-width: 991px) {
+  .title {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 640px) {
+  .title {
+    font-size: 32px;
+  }
 }
 
 .registration-form {
@@ -50,54 +77,50 @@ body {
 
 .form-group {
   margin-bottom: 34px;
-  position: relative;
 }
 
-.phone-input-wrapper {
+.phone-input-container {
   display: flex;
   align-items: center;
   border: 1px solid #dfdfdf;
   background-color: #fff;
   height: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
 }
 
 .country-code {
   color: #000;
+  font-family: Inter, sans-serif;
   font-size: 24px;
 }
 
 .phone-input {
   flex: 1;
   color: #c9c9c9;
+  font-family: Inter, sans-serif;
   font-size: 24px;
   border: none;
   outline: none;
-  font-family: 'Inter', sans-serif;
 }
 
-.password-input-wrapper,
-.password-confirm-wrapper {
+.password-input-container {
   border: 1px solid #dfdfdf;
   background-color: #fff;
   height: 50px;
-  padding-left: 31px;
-  padding-right: 31px;
+  padding: 0 31px;
 }
 
-.password-input,
-.password-confirm-input {
+.password-input {
   width: 100%;
   height: 100%;
   color: #c9c9c9;
+  font-family: Inter, sans-serif;
   font-size: 24px;
   border: none;
   outline: none;
-  font-family: 'Inter', sans-serif;
 }
 
-.form-group:nth-child(3) {
+.form-group:last-of-type {
   margin-bottom: 72px;
 }
 
@@ -106,33 +129,34 @@ body {
   background-color: #1a8754;
   height: 53px;
   color: rgba(255, 255, 255, 0.5);
+  font-family: Inter, sans-serif;
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 62px;
   border: none;
   cursor: pointer;
-  font-family: 'Inter', sans-serif;
 }
 
-.alternative-options {
+.alternative-login {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.alternative-title {
+.alternative-text {
   color: rgba(0, 0, 0, 0.8);
+  font-family: Inter, sans-serif;
   font-size: 16px;
   margin-bottom: 18px;
 }
 
-.social-icons {
+.social-login {
   display: flex;
   gap: 78px;
   margin-bottom: 31px;
 }
 
-.social-icon:first-child {
+.social-icon {
   width: 49px;
   height: 49px;
 }
@@ -144,60 +168,30 @@ body {
 
 .terms-text {
   font-size: 16px;
-  text-align: center;
+  font-family: Inter, sans-serif;
 }
 
-.terms-regular {
+.terms-text span {
   color: #000;
 }
 
-.terms-highlight {
+.terms-link {
   color: #6247ff;
+  text-decoration: none;
 }
 
-/* Media Queries */
-@media (max-width: 991px) {
-  .registration-wrapper {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .registration-title {
-    font-size: 40px;
-  }
-}
-
-@media (max-width: 640px) {
-  .registration-wrapper {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  .registration-title {
-    font-size: 32px;
-  }
-}
-
-/* Accessibility Enhancements */
+/* Focus styles for accessibility */
 input:focus,
 button:focus {
-  outline: 2px solid #6247ff;
+  outline: 2px solid #1a8754;
+  outline-offset: 2px;
 }
 
+/* Hover states */
 .submit-button:hover {
-  background-color: #146c43;
+  opacity: 0.9;
 }
 
-/* For screen readers only */
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
+.terms-link:hover {
+  text-decoration: underline;
 }
