--- a/Login/sign_upstyle.css
+++ b/Login/sign_upstyle.css
@@ -1,3 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+.phone-input,
+.password-input {
+  line-height: 1;
+}
+.error-message {
+	color: red;
+	font-weight: bold;
+	padding: 10px;
+	background-color: #f8d7da;
+	border: 1px solid #f5c6cb;
+	margin-bottom: 10px;
+}
 .registration-container {
   display: flex;
   min-height: 100vh;
@@ -85,29 +100,29 @@
   border: 1px solid #dfdfdf;
   background-color: #fff;
   height: 50px;
-  padding: 0 15px;
 }
 
 .country-code {
   color: #000;
   font-family: Inter, sans-serif;
   font-size: 24px;
+  margin-right: 10px;
 }
 
 .phone-input {
-  flex: 1;
+  
   color: #c9c9c9;
   font-family: Inter, sans-serif;
   font-size: 24px;
   border: none;
-  outline: none;
+  height: 100%;
+  width: 100%;
 }
 
 .password-input-container {
   border: 1px solid #dfdfdf;
   background-color: #fff;
   height: 50px;
-  padding: 0 31px;
 }
 
 .password-input {
